stylesheet.css
/*Assignment Stylesheet*/
body {
  font-family: 'Muli', sans-serif;
  text-align: center;
}

.topnav{
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: grey;
    position: fixed;
    top: 0;
    width: 100%;
  }
ul.topnav li{
  float:left;
}

li a{
  display: block;
  float:left;
  width: 100%;
  color: white;
  text-align: center;
  padding: 10px 30px;
  text-decoration: none;
}

.content-section {
  padding: 50px 0;
  background-image: url("fresh_snow_@2X.png");
}

.content-section-a {
    padding: 30px 150px 30px 150px;
    background-color: #f8f8f8;
    text-align: center;
}

.content-section-b {
    padding: 30px 0;
    background-image: url("fresh_snow_@2X.png");
}

.content-section-c{
  padding: 30px 0;
  background-color: #f8f8f8;
}

.container{
  width: 100%;
}

.inner-image{
  width: 100%;
  height: auto;
  display: block;
  float: left;
  padding: 1px;
  background-color: grey;
}

.content-section-d {
    padding: 30px 0;
    background-color: #c7fcf9;
}

#skills {
  list-style-type:none;
  padding: 10px;
  margin: 0
}

a
{
text-decoration: none;
}

